--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAME HERE"
+title: "Political Likert Data"
+author: "Andus Kong, Sieyona Chang"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
